resources/assets/styles/_basic.scss
body {
    padding-top: 70px;
}

code {
    background: inherit;
    color: #000;
}

a.action {
    color: #666;
    font-size: 0.9em;
    margin-right: 6px;
    text-decoration: none;

    &:hover {
        color: #000;
    }
}

.nav-search-label {
    cursor: pointer;
}

.navbar-form button {
    margin-left: -7px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

